--- a/index.html
+++ b/index.html
@@ -7,20 +7,41 @@
   <title>Box Model</title>
 </head>
 <body>
-  <div class="box-1">
-    <h2>Box 1</h2>
-  </div><br>
-  <div class="box-2">
-    <h2>Box 2</h2>
-  </div><br>
-  <div class="box-3">
-    <h2>Box 3</h2>
-  </div><br>
-  <div class="box-4">
-    <h2>Box 4</h2>
-  </div><br>
-  <div class="box-5">
-    <h2>Box 5</h2>
-  </div>
+  <section class="boxes">
+    <div class="box-1">
+      <h2>Box 1</h2>
+    </div><br>
+    <div class="box-2">
+      <h2>Box 2</h2>
+    </div><br>
+    <div class="box-3">
+      <h2>Box 3</h2>
+    </div><br>
+    <div class="box-4">
+      <h2>Box 4</h2>
+    </div><br>
+    <div class="box-5">
+      <h2>Box 5</h2>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <h2><a href="./index.html">Chioma</a></h2>
+      <p>Copyright &copy; 2025</p>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Box Model</a></li>
+          <li><a href="./flexbox.html">Flex Box</a></li>
+          <li><a href="./grid.html">Grid</a></li>
+          <li><a href="./navbar.html">Navbar</a></li>
+          <li><a href="./productcard.html">Product Card</a></li>
+          <li><a href="./landpage.html">Landing Page</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
