--- a/flexbox.html
+++ b/flexbox.html
@@ -40,5 +40,24 @@
   </section>
   
   <button>Load More</button>
+
+  <footer>
+    <div>
+      <h2><a href="./index.html">Chioma</a></h2>
+      <p>Copyright &copy; 2025</p>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Box Model</a></li>
+          <li><a href="./flexbox.html">Flex Box</a></li>
+          <li><a href="./grid.html">Grid</a></li>
+          <li><a href="./navbar.html">Navbar</a></li>
+          <li><a href="./productcard.html">Product Card</a></li>
+          <li><a href="./landpage.html">Landing Page</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
