--- a/grid.html
+++ b/grid.html
@@ -11,11 +11,11 @@
   <section class="blog">
     <aside class="author-info">
       <div>
-        <h2>Author's Bio</h2>
+        <h2 class="text">Author's Bio</h2>
         <img src="./images/doja.jpeg" alt="">
-        <h3>Chimamanda Adichie</h3>
-        <h5>Travel Blogger</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta optio nobis maiores repellendus debitis eligendi at suscipit necessitatibus ipsum eius?</p>
+        <h3 class="text">Chimamanda Adichie</h3>
+        <h5 class="text">Travel Blogger</h5>
+        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta optio nobis maiores repellendus debitis eligendi at suscipit necessitatibus ipsum eius?</p>
       </div>
     </aside>
 
@@ -81,7 +81,7 @@
 
     <aside class="categories">
       <div>
-        <h2>Blog Categories</h2>
+        <h2  class="text">Blog Categories</h2>
         <nav>
           <ul>
             <li><a href="#">Entertainment</a></li>
@@ -94,7 +94,7 @@
       </div>
       
       <div>
-        <h2>Navigate Travel Blog</h2>
+        <h2 class="text">Navigate Travel Blog</h2>
         <nav>
           <ul>
             <li><a href="#">Attractions</a></li>
@@ -107,5 +107,24 @@
       </div>
     </aside>
   </section>
+
+  <footer>
+    <div>
+      <h2><a href="./index.html">Chioma</a></h2>
+      <p>Copyright &copy; 2025</p>
+    </div>
+    <div>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Box Model</a></li>
+          <li><a href="./flexbox.html">Flex Box</a></li>
+          <li><a href="./grid.html">Grid</a></li>
+          <li><a href="./navbar.html">Navbar</a></li>
+          <li><a href="./productcard.html">Product Card</a></li>
+          <li><a href="./landpage.html">Landing Page</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
