--- a/landpage.html
+++ b/landpage.html
@@ -127,7 +127,7 @@
     <div>
       <nav>
         <ul>
-          <li><a href="./landpage.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Features</a></li>
         </ul>
