--- a/grid.html
+++ b/grid.html
@@ -74,7 +74,7 @@
         <img src="./images/moonfrom_hilltop.webp" alt="">
         <div class="text">
           <h2>Moon from a Hill Top</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias odio veniam, quaerat iure harum praesentium nam corporis explicabo qui corrupti!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias odio veniam, quaerat iure harum praesentium nam corporis explicabo qui!</p>
         </div>
       </div>
     </main>
